// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BundleDeployer01 should generate deploy JCL for csdgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       CSDGROUP(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(AVAILABLE)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for csdgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       CSDGROUP(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(AVAILABLE)
       TIMEOUT(1500)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(AVAILABLE)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate deploy JCL for resgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       RESGROUP(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(1234567890)
       SCOPE(12345678)
       STATE(AVAILABLE)
       TIMEOUT(1500)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for csdgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for csdgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       CSDGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for resgroup 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should generate undeploy JCL for resgroup with timeout 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       TIMEOUT(1500)
       RESGROUP(12345678);
/*
"
`;

exports[`BundleDeployer01 should support long bundledir 1`] = `
"//DFHDPLOY JOB DFHDPLOY,CLASS=A,MSGCLASS=X,TIME=NOLIMIT
//DFHDPLOY EXEC PGM=DFHDPLOY,REGION=100M
//STEPLIB  DD DISP=SHR,DSN=12345678901234567890123456789012345.SDFHLOAD
//         DD DISP=SHR,DSN=12345678901234567890123456789012345.SEYUAUTH
//SYSTSPRT DD SYSOUT=*
//SYSIN    DD *
*
SET CICSPLEX(12345678);
*
UNDEPLOY BUNDLE(12345678)
       SCOPE(12345678)
       STATE(DISCARDED)
       RESGROUP(12345678);
*
DEPLOY BUNDLE(12345678)
       BUNDLEDIR(123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345)
       SCOPE(12345678)
       STATE(AVAILABLE)
       RESGROUP(12345678);
/*
"
`;
